Changelog
=========

0.3 (unreleased)
----------------

- Create new CONSUL_IGNOREVHM option [instification]


0.2 (2021-09-16)
----------------

- Add Python3 compatibility [instification]


0.1 (2018-02-01)
----------------

- Initial setup and vhm monkeypatching [djay]
- Addition of zope-additional-configuration option [instification]
- Addition of key/value pairs to consul [instification]